--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="./CopyCenter Canarias_files/styles.css" rel="stylesheet" type="text/css">
+        <link href="./assets/css/styles.css" rel="stylesheet" type="text/css">
         
         <!-- TITTLE -->
         <title>CopyCenter Canarias</title>
         <meta name="description" content="Trabajamos con impresión Látex, lo que garantiza calidad y durabilidad a todos tus proyectos. Corte y grabado láser para complementar tus trabajos.">
         <meta name="keywords" content="html, css, jquery">
         <link rel="canonical" href="https://copycenter-canarias.es/">
-        <link rel="icon" href="./CopyCenter Canarias_files/image02.png" type="image/x-png">
+        <link rel="icon" href="./assets/img/image02.png" type="image/x-png">
         
         <!-- ROBOTS -->
         <meta name="robots" content="all">
@@ -23,8 +23,8 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="Trabajamos con impresión Látex, lo que garantiza calidad y durabilidad a todos tus proyectos. Corte y grabado láser para complementar tus trabajos.">
         <meta property="og:locale" content="es_ES">
-        <meta property="og:image" content="./CopyCenter Canarias_files/img/preview.jpg">
-        <meta property="og:image:type" content="image/jpeg">
+        <meta property="og:image" content="./assets/img/img/home.png">
+        <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1280">
         <meta property="og:image:height" content="800">
         <meta property="og:url" content="https://copycenter-canarias.es/">
@@ -2375,7 +2375,7 @@
                                 <div class="inner">
                                     <div id="image02" class="image" style="opacity: 1; transform: none;">
                                         <a href="https://copycenter-canarias.es/" class="frame">
-                                            <img src="./CopyCenter Canarias_files/image02.png" alt="logo">
+                                            <img src="./assets/img/image02.png" alt="logo">
                                         </a>
                                     </div>
                                     <h1 id="text28" class="style3" style="opacity: 1;">CopyCenter Canarias</h1>
@@ -2396,7 +2396,7 @@
                                     <div>
                                         <div id="image03" class="style1 image" style="opacity: 1; transform: none;">
                                             <span class="frame">
-                                                <img src="./CopyCenter Canarias_files/image03.png" alt="">
+                                                <img src="./assets/img/image03.png" alt="">
                                             </span>
                                         </div>
                                         <h3 id="text06" class="style2">Grabado &amp; Corte láser</h3>
@@ -2405,7 +2405,7 @@
                                     <div>
                                         <div id="image06" class="style1 image" style="opacity: 1; transform: none;">
                                             <span class="frame">
-                                                <img src="./CopyCenter Canarias_files/image06.png" alt="">
+                                                <img src="./assets/img/image06.png" alt="">
                                             </span>
                                         </div>
                                         <h3 id="text13" class="style2">Reprografía</h3>
@@ -2421,7 +2421,7 @@
                                     <div>
                                         <div id="image05" class="style1 image" style="opacity: 1; transform: none;">
                                             <span class="frame">
-                                                <img src="./CopyCenter Canarias_files/image05.png" alt="">
+                                                <img src="./assets/img/image05.png" alt="">
                                             </span>
                                         </div>
                                         <h3 id="text01" class="style2">Sellos</h3>
@@ -2430,7 +2430,7 @@
                                     <div>
                                         <div id="image04" class="style1 image" style="opacity: 1; transform: none;">
                                             <span class="frame">
-                                                <img src="./CopyCenter Canarias_files/image04.png" alt="">
+                                                <img src="./assets/img/image04.png" alt="">
                                             </span>
                                         </div>
                                         <h3 id="text04" class="style2">Gran formato</h3><p id="text05" class="style1" style="opacity: 1;">Contamos con la última tecnología en impresión digital en gran formato, máxima calidad y durabilidad con la tecnología HP Látex, con un ancho máximo de 160 cm.</p>
@@ -2444,7 +2444,7 @@
                                 <div class="inner">
                                     <div id="image01" class="style1 image" style="opacity: 1; transform: none;">
                                         <span class="frame">
-                                            <img src="./CopyCenter Canarias_files/image01.png" alt="">
+                                            <img src="./assets/img/image01.png" alt="">
                                         </span>
                                     </div>
                                     <h3 id="text17" class="style2">Blog</h3>
